--- a/trunk/o2TestWindows/o2TestWindows.vcxproj.filters
+++ b/trunk/o2TestWindows/o2TestWindows.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="src\tests\animation_test.cpp">
       <Filter>src\tests</Filter>
     </ClCompile>
+    <ClCompile Include="src\tests\text_test.cpp">
+      <Filter>src\tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\test_app.h">
@@ -28,6 +31,9 @@
       <Filter>src\tests</Filter>
     </ClInclude>
     <ClInclude Include="src\tests\animation_test.h">
+      <Filter>src\tests</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tests\text_test.h">
       <Filter>src\tests</Filter>
     </ClInclude>
   </ItemGroup>
