--- a/trunk/o2TestWindowsProj/builds/win32/proj/msvc_2010/o2TestWindows.vcxproj
+++ b/trunk/o2TestWindowsProj/builds/win32/proj/msvc_2010/o2TestWindows.vcxproj
@@ -49,14 +49,16 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="properties.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="properties.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)../../bin/</OutDir>
-    <LibraryPath>../../../../../o2engine\lib;../../../../../o2engine\dependencies\pthreads;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(o2enginePath)/lib;../../../../../o2engine\dependencies\pthreads;$(LibraryPath)</LibraryPath>
     <IncludePath>../../../../src;../../../../../o2engine\dependencies\pthreads;../../../../../o2engine\dependencies;../../../../../o2engine\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
