--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj.filters
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj.filters
@@ -854,5 +854,8 @@
     <ClCompile Include="..\src\util\serialize_util.cpp">
       <Filter>src\util</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\util\build_system\build_config.cpp">
+      <Filter>src\util\build_system</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
