--- a/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/o2engine/vc2010_proj/o2engine.vcxproj
@@ -311,6 +311,7 @@
     <ClCompile Include="..\src\util\animation\animation_group.cpp" />
     <ClCompile Include="..\src\util\assert_win.cpp" />
     <ClCompile Include="..\src\util\build_system\atlas_info.cpp" />
+    <ClCompile Include="..\src\util\build_system\build_config.cpp" />
     <ClCompile Include="..\src\util\build_system\build_info.cpp" />
     <ClCompile Include="..\src\util\build_system\build_system.cpp" />
     <ClCompile Include="..\src\util\clipboard.cpp" />
