--- a/trunk/o2engine/vc2010_proj/o2engine.vcxproj
+++ b/trunk/o2engine/vc2010_proj/o2engine.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="..\src\util\build_system\build_config.h" />
     <ClInclude Include="..\src\util\build_system\build_info.h" />
     <ClInclude Include="..\src\util\build_system\build_system.h" />
+    <ClInclude Include="..\src\util\build_system\nonbuild_files_builder.h" />
     <ClInclude Include="..\src\util\callback.h" />
     <ClInclude Include="..\src\util\clipboard.h" />
     <ClInclude Include="..\src\util\data_utils.h" />
@@ -314,6 +315,7 @@
     <ClCompile Include="..\src\util\build_system\build_config.cpp" />
     <ClCompile Include="..\src\util\build_system\build_info.cpp" />
     <ClCompile Include="..\src\util\build_system\build_system.cpp" />
+    <ClCompile Include="..\src\util\build_system\nonbuild_files_builder.cpp" />
     <ClCompile Include="..\src\util\clipboard.cpp" />
     <ClCompile Include="..\src\util\file_system\file.cpp" />
     <ClCompile Include="..\src\util\file_system\file_system.cpp" />
